for now fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@
 
 /* start make and merge sell & fraud & market & payment component style */
 .fourComponentContainer {
-  @apply flex flex-row-reverse items-start justify-between w-full overflow-hidden px-2 mx-auto my-60 mdMax:!flex-col mdMax:my-20 mdMax:px-6 mdMax:items-center;
+  @apply flex flex-row-reverse items-start justify-between w-full px-8 mx-auto my-60 mdMax:!flex-col mdMax:my-20 mdMax:px-6 mdMax:items-center;
 }
 .fourComponentContainer-imgs {
   @apply relative max-w-[520px] w-[45%] flex items-end mdMax:w-full mdMax:mt-12 mdMax:ml-auto;
@@ -56,7 +56,7 @@
   @apply absolute -z-10 top-[-2rem] object-cover max-w-3xl w-full transform scale-125;
 }
 .fourComponentContainer-imgs_sec {
-  @apply object-cover w-full max-w-md rounded-lg;
+  @apply object-cover w-full max-w-md pt-8 rounded-lg;
 }
 .fourComponentContainer_deatailCont {
   @apply w-[calc(55%-1rem)] mdMax:w-full;
@@ -77,7 +77,7 @@
   @apply mb-5 mdMax:text-sm mdMax:mb-3;
 }
 .fourComponentContainer-itemsContainer h2 {
-  @apply mb-4 text-xl font-normal leading-6 mdMax:text-base mdMax:leading-5 mdMax:mb-3 mdMax:font-semibold;
+  @apply mb-4 text-xl font-bold leading-6 mdMax:text-base mdMax:leading-5 mdMax:mb-3 mdMax:font-semibold;
 }
 .fourComponentContainer-itemsContainer p {
   @apply text-base font-normal mdMax:text-sm mdMax:!mb-0;
